tests/fixtures/errors/union_unknown_arg.z
# E0300: an unknown label on a variant subtype payload (only `from`/positional).
result: variant {
    ok: i64
    fail: null
} as { tag: u8.tag }
main: function is {
    r: result.ok bogus: 1
}
